Space the new tab button away from the avatar button in maximized mode.

This fix applies solely to pre-refresh and corrects a regression in previous
refactoring I did in https://crrev.com/555249 .

Bug: 840338
Test: Launch chrome in Material (not Refresh) mode; maximized the window and open enough tabs to fill the strip.  The new tab button should not be near-touching the profile avatar button.
Change-Id: I60598a1e7bcf45e039d19424c8639958094b7658
Reviewed-on: https://chromium-review.googlesource.com/1136065
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574833}
Former-commit-id: 29cbb720f7e3d59ccaf96bbc44fff3a923c3caae